# ocaml-uring

./: .gitignore  .gitmodules  CHANGES.md  HACKING.md  LICENSE.md  Makefile  README.md  baregion.ml  baregion.mli  build.sh  dune  dune-project  euring.ml  euring.mli  index.html  iovec.ml  iovec.mli  iovec.opam  urcat.ml  urcp.ml  uring.ml  uring.mli  uring.opam  uring.opam.template  uring_stubs.c  uring_test.ml
bench/: .ocamlformat  cptest.ml  dune  main.ml  readv.ml
bench/bechamel_csv/: bechamel_csv.ml  bechamel_csv.mli  dune
examples/: dune  urcat.ml  urcp.ml
include/: dune
lib/iovec/: dune  iovec.ml  iovec.mli  iovec_stubs.c
lib/uring/: dune  heap.ml  heap.mli  primitives.h  region.ml  region.mli  uring.ml  uring.mli  uring_stubs.c  util.ml
lib/uring/include/: discover.ml  dune  gen.ml
lib/uring/include/liburing/: dune
man/: io_uring_prep_read_fixed.3  io_uring_prep_recvmsg.3  io_uring_prep_tee.3  io_uring_prep_writev2.3  io_uring_register_buf_ring.3
test/: fd-pass.c  poll-mshot-wake.c
tests/: basic_eunix.ml  basic_file_read.ml  buffer_test.ml  cptest.ml  dune  eurcp_lib.ml  fork.ml  heap.md  lwtcp.ml  lwtcp_lib.ml  main.md  main.ml  poll_add.ml  sketch.md  socket_ops.ml  stubs.c  urcat.ml  urcp.ml  urcp_fixed_lib.ml  urcp_lib.ml  urstat.ml
uring/: index.html
uring/Uring/: index.html
uring/Uring/Linkat_flags/: index.html
uring/Uring/Msghdr/: index.html
uring/Uring/Op/: index.html
uring/Uring/Open_flags/: index.html
uring/Uring/Poll_mask/: index.html
uring/Uring/Private/: index.html
uring/Uring/Private/Heap/: index.html
uring/Uring/Region/: index.html
uring/Uring/Resolve/: index.html
uring/Uring/Sockaddr/: index.html
uring/Uring/Stats/: index.html
uring/Uring/Statx/: index.html
uring/Uring/Statx/Attr/: index.html
uring/Uring/Statx/Flags/: index.html
uring/Uring/Statx/Mask/: index.html
uring/Uring/module-type-FLAGS/: index.html
uring/Uring__/: index.html
uring/Uring__Config/: index.html
uring/Uring__Heap/: index.html
uring/Uring__Region/: index.html
