(lang dune 3.0)
(name uring)
(generate_opam_files true)
(using mdx 0.2)
(formatting disabled)
(source (github ocaml-multicore/ocaml-uring))
(license "(ISC AND MIT)")
(authors "Anil Madhavapeddy" "Sadiq Jaffer" "Thomas Leonard")
(maintainers "anil@recoil.org")
(documentation "https://ocaml-multicore.github.io/ocaml-uring/")
(package
 (name uring)
 (synopsis "OCaml bindings for Linux io_uring")
 (description "Bindings to the Linux io_uring kernel IO interfaces. See https://github.com/ocaml-multicore/eio for a higher-level API using this.")
 (depends
  (cstruct (>= 6.0.1))
  (ocaml (>= 4.12.0))
  dune-configurator
  (lwt (and :with-test (>= 5.0.0)))
  (bechamel (and (>= 0.1.0) :with-test))
  (logs (and :with-test (>= 0.5.0)))
  (cmdliner (and :with-test (>= 1.1.0)))
  (fmt (>= 0.8.10))
  (optint (>= 0.1.0))
  (mdx (and (>= 2.1.0) :with-test))))
