(test
 (name main)
 (modules main)
 (package uring)
 (libraries bigstringaf unix uring alcotest optint))

(library
 (name urcp_lib)
 (modules urcp_lib)
 (libraries fmt unix uring logs))

(library
 (name urcp_fixed_lib)
 (modules urcp_fixed_lib)
 (libraries fmt unix uring logs))

(library
 (name lwtcp_lib)
 (modules lwtcp_lib)
 (libraries lwt.unix logs))

(executable
 (name urcat)
 (modules urcat)
 (public_name urcat)
 (package uring)
 (libraries bigstringaf unix uring))

(executable
 (name urcp)
 (modules urcp)
 (public_name urcp)
 (package uring)
 (libraries cmdliner logs.cli logs.fmt fmt.tty fmt.cli urcp_fixed_lib
   urcp_lib))

(executable
 (name lwtcp)
 (modules lwtcp)
 (public_name lwtcp)
 (package uring)
 (libraries cmdliner logs.cli logs.fmt fmt.tty fmt.cli lwtcp_lib))

(executable
 (name poll_add)
 (modules poll_add)
 (libraries unix uring alcotest logs logs.fmt))

(executable
 (name cptest)
 (modules cptest)
 (libraries urcp_fixed_lib urcp_lib lwtcp_lib uring bos bechamel notty.unix
   bechamel-notty))

(rule
 (alias runtest)
 (package uring)
 (action (run ./poll_add.exe)))

(rule
 (alias runbenchmark)
 (package uring)
 (deps urcp.exe)
 (action
  (run ./cptest.exe ./urcp.exe)))
